Platform support for Lenovo Phab Plus (pb1770m)

--- a/drivers/platform/lenovo/Kconfig
+++ b/drivers/platform/lenovo/Kconfig
@@ -15,5 +15,10 @@ config MACH_LENOVO_MSM8939
 
 menu "Lenovo board selection"
 
+config MACH_PB1770M
+	bool "PB1770M board"
+	select MACH_LENOVO_MSM8939
+	help
+	  Support for Lenovo pb1770m variant
 
 endmenu
