init: Import Lenovo changes * init: hardware_info.c * include:linux: hardware_info.h

--- a/init/Makefile
+++ b/init/Makefile
@@ -10,6 +10,8 @@ obj-$(CONFIG_BLK_DEV_INITRD)   += initramfs.o
 endif
 obj-$(CONFIG_GENERIC_CALIBRATE_DELAY) += calibrate.o
 
+obj-$(CONFIG_HW_INFO) += hardware-info.o
+
 ifneq ($(CONFIG_ARCH_INIT_TASK),y)
 obj-y                          += init_task.o
 endif
