--- a/arch/arm/boot/dts/qcom/pb1770m/msm8939-qrd-pb1770m.dtsi
+++ b/arch/arm/boot/dts/qcom/pb1770m/msm8939-qrd-pb1770m.dtsi
@@ -286,11 +286,11 @@
 
 / {
 	qrd_batterydata: qcom,battery-data {
-		qcom,rpull-up-kohm = <100>;
-		qcom,vref-batt-therm = <1800000>;
+		qcom,rpull-up-kohm = <0x64>;
+		qcom,vref-batt-therm = <0x1b7740>;
 
-		#include "batterydata-qrd-skuk-scud-4v35-3600mah.dtsi"
-		#include "batterydata-qrd-skuk-xwd-4v35-3500mah.dtsi"
+		#include "batterydata-qrd-skuh-4v35-3600mah.dtsi"
+		#include "batterydata-qrd-skuh-4v35-3500mah.dtsi"
 	};
 };
 
