Import lenovo audio changes

--- a/arch/arm/boot/dts/qcom/pb1770m/msm8939-qrd-pb1770m.dtsi
+++ b/arch/arm/boot/dts/qcom/pb1770m/msm8939-qrd-pb1770m.dtsi
@@ -71,6 +71,12 @@
 		hall,inactive_code = <149>;
 		hall,debounce-interval = <20>;
 	};
+
+    sound {
+		qcom,mbhc-headset-en-gpio = <&msm_gpio 108 0>;
+		pinctrl-0 = <&cdc_pdm_lines_act &cdc_dmic_lines_act>;
+		pinctrl-1 = <&cdc_pdm_lines_sus &cdc_dmic_lines_sus>;
+	};
 	
 };
 
