--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -893,5 +893,31 @@ config SENSORS_BMI160_ENABLE_INT2
 	help
 	 If you say yes here, you get INT2 support for Bosch Sensortec
 	 sensors BMI160.
+
+config SENSORS_LTR559
+	tristate "LTR559 Digital P/L sensor support"
+	depends on I2C
+	default n
+	help
+	 If you say yes here you get support for LITEON
+	 P/L sensors LTR559.
+	 
+config SENSORS_MMC3524X
+	tristate "MMC3524xPJ 3-axis magnetic sensor driver"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you want to enable the MMC3524xPJ magnetic sensor
+	  driver.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called MMC3524x.
+	  
+config SENSORS_HALL		
+ 	bool "hall device"
+	default n
+	help
+	  Enables support for the hall device which used on smart cover.
+
 endif
 
