--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -80,6 +80,10 @@ obj-$(CONFIG_SENSORS_BMA2X2)	+= bstclass.o
 obj-$(CONFIG_SENSORS_BMA2X2)	+= bma2x2.o
 obj-$(CONFIG_SENSORS_LTR553)	+= ltr553.o
 
+obj-$(CONFIG_SENSORS_LTR559)    += ltr559.o
+obj-$(CONFIG_SENSORS_MMC3524X)		+= mmc3524x.o
+obj-$(CONFIG_SENSORS_HALL)	   += hall_sensor.o
+
 ifeq ($(CONFIG_SENSORS_BMA2X2_ENABLE_INT1),y)
 	EXTRA_CFLAGS += -DBMA2X2_ENABLE_INT1
 endif
