arm64:configs: Enable sendors

--- a/arch/arm64/configs/lineageos_pb1770m_defconfig
+++ b/arch/arm64/configs/lineageos_pb1770m_defconfig
@@ -316,6 +316,10 @@ CONFIG_GT9XX_TOUCHPANEL_UPDATE=y
 CONFIG_GT9XX_TOUCHPANEL_DEBUG=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_INPUT_MISC=y
+CONFIG_SENSORS_BMA2X2=y
+CONFIG_SENSORS_LTR559=y
+CONFIG_SENSORS_MMC3524X=y
+CONFIG_SENSORS_HALL=y
 CONFIG_SENSORS_MPU6050=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
