--- a/arch/arm/boot/dts/qcom/pb1770m/msm8939-qrd-pb1770m.dtsi
+++ b/arch/arm/boot/dts/qcom/pb1770m/msm8939-qrd-pb1770m.dtsi
@@ -21,6 +21,9 @@
 &soc {
 	
 	i2c@78ba000 { /* BLSP1 QUP6 */
+	    
+		/delete-node/ nfc-nci@e;
+		
 		goodix@5d {
 			compatible = "goodix,gt9xx";
 			reg = <0x5d>;
@@ -71,12 +74,13 @@
 		hall,inactive_code = <149>;
 		hall,debounce-interval = <20>;
 	};
-
-    sound {
+	
+	sound {
 		qcom,mbhc-headset-en-gpio = <&msm_gpio 108 0>;
 		pinctrl-0 = <&cdc_pdm_lines_act &cdc_dmic_lines_act>;
 		pinctrl-1 = <&cdc_pdm_lines_sus &cdc_dmic_lines_sus>;
 	};
+	
 	
 };
 
@@ -134,6 +138,8 @@
                         ltr,ps-hysteresis-threshold = <500>; 
                         ltr,als-polling-time = <200>; 
         }; 
+		
+	/delete-node/ memsic@30;
 
 	memsic@30 { /* Magnetic field sensor */
 		compatible = "memsic,mmc3524x";
@@ -144,7 +150,32 @@
 		memsic,auto-report;
 	};
 	
-	/delete-node/ memsic@30;
+	mpu6050@68 { /* Gyroscope and accelerometer sensor combo */
+		compatible = "invn,mpu6050";
+		reg = <0x68>;
+		pinctrl-names = "mpu_default","mpu_sleep";
+		pinctrl-0 = <&mpu6050_default>;
+		pinctrl-1 = <&mpu6050_sleep>;
+		interrupt-parent = <&msm_gpio>;
+		interrupts = <115 0x2002>;
+		vdd-supply = <&pm8916_l17>;
+		vlogic-supply = <&pm8916_l16>;
+		vi2c-supply = <&pm8916_l6>;
+		invn,gpio-int = <&msm_gpio 115 0x2002>;
+		invn,place = "Portrait Down Back Side";
+	};
+	
+	mCube@4c {
+			compatible = "mCube,mc3xxx";
+			reg = <0x4c>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&mc3xxx_default>;
+			vdd-supply = <&pm8916_l17>;
+			vio-supply = <&pm8916_l6>;
+			mcube,init-interval = <200>;
+			mcube,place = <0>;
+			mcube,slave_addr_sel_gpio = <&msm_gpio 118 0>;
+		};
 	
 	tps65132@3e {
 		compatible = "ti,tps65132";
@@ -157,8 +188,8 @@
 		regulators {
 			tps65132_pos: pos-boost {
 				regulator-name = "tps65132-pos";
-				regulator-min-microvolt = <5900000>;
-				regulator-max-microvolt = <5900000>;
+				regulator-min-microvolt = <5400000>;
+				regulator-max-microvolt = <5400000>;
 				ti,discharge-enable;
 				ti,enable-time = <800>;
 				ti,current-limit = <200000>;
@@ -167,8 +198,8 @@
 
 			tps65132_neg: neg-boost {
 				regulator-name = "tps65132-neg";
-				regulator-min-microvolt = <5900000>;
-				regulator-max-microvolt = <5900000>;
+				regulator-min-microvolt = <5400000>;
+				regulator-max-microvolt = <5400000>;
 				ti,discharge-enable;
 				ti,enable-time = <800>;
 				ti,current-limit = <40000>;
@@ -181,33 +212,51 @@
 
 &i2c_4 {
 	smb358_otg_supply: smb358-charger@6A {
-		compatible = "qcom,smb358-charger";
-		reg = <0x6A>;
-		qcom,irq-gpio = <&msm_gpio 62 2>;
-		vcc-i2c-supply = <&pm8916_l5>;
-		qcom,float-voltage-mv = <4350>;
-		qcom,recharge-mv = <50>;
-		qcom,chg-vadc = <&pm8916_vadc>;
-		qcom,chg-adc_tm = <&pm8916_adc_tm>;
-		qcom,chg-inhibit-disabled;
-		qcom,bms-controlled-charging;
-		qcom,using-pmic-therm;
-		qcom,chg-green = <&msm_gpio 119 2>;
-		qcom,chg-blue = <&msm_gpio 8 2>;
-		regulator-name = "smb358_otg_vreg";
-		qcom,fastchg-current-max-ma = <1800>;
-		qcom,iterm-ma = <100>;
-		qcom,bms-psy-name = "bms";
-		qcom,hot-bat-decidegc = <500>;
-		qcom,cold-bat-decidegc = <0>;
-		qcom,bat-present-decidegc = <200>;
-		qcom,warm-bat-decidegc = <450>;
-		qcom,cool-bat-decidegc = <150>;
-		qcom,warm-bat-ma = <1800>;
-		qcom,cool-bat-ma = <720>;
-		qcom,warm-bat-mv = <4100>;
-		qcom,cool-bat-mv = <4350>;
-	};
+			compatible = "qcom,smb358-charger";
+			reg = <0x6A>;
+			interrupt-parent = <&msm_gpio>;
+			interrupts = <62 8>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&smb_int_default>;
+
+			qcom,float-voltage-mv = <4360>;
+			qcom,recharge-mv = <50>;
+			//qcom,recharge-disabled;
+			regulator-name = "smb358_otg_vreg";
+			qcom,thermal-mitigation = <1300 700 600 0>;
+			qcom,fastchg-current-max-ma = <1800>;
+
+			qcom,disable-apsd;
+			qcom,bms-psy-name = "bms";
+			/* qcom,iterm-disabled; */
+			qcom,iterm-ma = <100>;
+			qcom,bms-controlled-charging;
+			qcom,chg-inhibit-disabled;
+			qcom,chg-vadc = <&pm8916_vadc>;
+			qcom,chg-adc_tm = <&pm8916_adc_tm>;
+			//qcom,vcc-i2c-supply = <&pm8916_l5>;
+			qcom,irq-gpio = <&msm_gpio 62 2>;
+			
+			/* Chg LED */
+			
+			qcom,chg-green = <&msm_gpio 119 2>;
+		    qcom,chg-blue = <&msm_gpio 8 2>;
+
+			qcom,using-pmic-therm;
+			qcom,hot-bat-decidegc = <500>;
+			qcom,cold-bat-decidegc = <0>;
+			qcom,bat-present-decidegc = <200>;
+			/*
+			 * Below properties are used for enable JEITA
+			 */
+			qcom,warm-bat-decidegc = <450>;
+			qcom,cool-bat-decidegc = <150>;
+			qcom,warm-bat-ma = <1000>;
+			qcom,cool-bat-ma = <720>;
+			qcom,warm-bat-mv = <4100>;
+			qcom,cool-bat-mv = <4350>;
+			status = "ok";
+		};
 };
 
 &sdc2_cd_on {
@@ -237,6 +286,7 @@
 
 &mdss_dsi0 {
 	qcom,dsi-pref-prim-pan = <&dsi_nt35532_1080p_skuk_video>;
+	qcom,dsi-pref-sub-pan = <&dsi_nt35596_1080p_skuk_video>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
 	pinctrl-0 = <&mdss_dsi_active>;
 	pinctrl-1 = <&mdss_dsi_suspend>;
@@ -256,8 +306,6 @@
 	qcom,ctrl-supply-entries {
 		/delete-node/ qcom,ctrl-supply-entry@0;
 	};
-	
-	/delete-node/ qcom,ctrl-supply-entries;
 
 	qcom,panel-supply-entries {
 		/delete-node/qcom,panel-supply-entry@0;
@@ -265,8 +313,8 @@
 		qcom,panel-supply-entry@2 {
 			reg = <2>;
 			qcom,supply-name = "vsp";
-			qcom,supply-min-voltage = <5900000>;
-			qcom,supply-max-voltage = <5900000>;
+			qcom,supply-min-voltage = <5400000>;
+			qcom,supply-max-voltage = <5400000>;
 			qcom,supply-enable-load = <200>;
 			qcom,supply-disable-load = <0>;
 		};
@@ -274,8 +322,8 @@
 		qcom,panel-supply-entry@3 {
 			reg = <3>;
 			qcom,supply-name = "vsn";
-			qcom,supply-min-voltage = <5900000>;
-			qcom,supply-max-voltage = <5900000>;
+			qcom,supply-min-voltage = <5400000>;
+			qcom,supply-max-voltage = <5400000>;
 			qcom,supply-enable-load = <40>;
 			qcom,supply-disable-load = <0>;
 		};
@@ -283,12 +331,15 @@
 
 };
 
-&dsi_nt35532_1080p_skuk_video {
-	qcom,cont-splash-enabled;
-	//qcom,esd-check-enabled;
-	//qcom,mdss-dsi-pan-enable-dynamic-fps;
-	//qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode";
+&mdss_dsi1 {
+    /delete-property/ qcom,dsi-clk-ln-recovery;
 };
+
+&pm8916_chg { 
+   qcom,resume-soc = <99>;
+};
+
+
 
 / {
 	qrd_batterydata: qcom,battery-data {
